@@ -1,4 +1,4 @@
-.\"	$NetBSD: mfi.4,v 1.5 2007/11/02 08:59:56 xtraeme Exp $
+.\"	$NetBSD: mfi.4,v 1.6 2008/02/25 10:46:02 xtraeme Exp $
 .\"	$OpenBSD: mfi.4,v 1.7 2006/09/01 09:58:09 jmc Exp $
 .\"
 .\" Written by Marco Peereboom <marco@peereboom.us>
@@ -24,7 +24,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd November 2, 2007
+.Dd February 25, 2008
 .Dt MFI 4
 .Os
 .Sh NAME
@@ -41,7 +41,9 @@ including:
 .Bl -dash -offset indent -compact
 .It
 Dell PERC 5/e,
-PERC 5/i
+PERC 5/i,
+PERC 6/e,
+PERC 6/i
 .It
 Intel RAID Controller SRCSAS18E,
 SRCSAS144E
@@ -52,7 +54,9 @@ MegaRAID SAS 8300XLP,
 MegaRAID SAS 8308ELP,
 MegaRAID SAS 8344ELP,
 MegaRAID SAS 8408E,
-MegaRAID SAS 8480E
+MegaRAID SAS 8480E,
+MegaRAID SAS 8888ELP,
+MegaRAID SAS 8880EM2
 .El
 .Pp
 These controllers support RAID 0, RAID 1, RAID 5, RAID 10, and RAID 50
